--- a/style.css
+++ b/style.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;
 } 
 :root{
-    --color-principal: #aa32b5;
+    --color-boton: linear-gradient(to right, #8a48e0 0%, #b160dd  51%, #8c45e7  100%);
 }
 html{
     font-family: Inter, roboto, sans-serif;
-    font-size: 17px;
+    font-size:62.5%;
+}
+body{
+    font-size: 1.5rem;
+    padding: 0 30px;
+    background: white;
 }
 ul{
     list-style: none;
@@ -18,56 +23,79 @@ ul{
 }
 /* Navegacion */
 .navegacion{
-    padding: 20px;
+    padding: 2rem 2rem ;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 .navegacion-logo{
-    width: 50px;
+    width: 45px;
     height: 50px;
     border-radius: 100%;
 }
 .lista{
-    width: 60%;
+    width: 40%;
     display: flex;
 }
 .item{
     cursor: pointer;
     margin: 0 auto;
 }
+
 .item:hover{
-    color: var(--color-principal);
+    color: var(--color-boton);
     font-weight: 500;
 }
-.boton{
-    font-size: 17px;
-    font-weight: 600;
-    background: var(--color-principal);
-    color: #fff;
-    padding: 12px;
+
+ .logo{
+        font-weight: 700;
+        font-size: 2rem;
+ }      
+.btn-grad {
+    background-image: var(--color-boton);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
     border: none;
-    border-radius: 5px;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
     cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 700;
+  }
+
+.btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
 }
+
 /* ------------------------------------- */
 /* Cuerpo */
 .cuerpo {
-    margin-top: 50px;
+    width: 85%;
+    margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 .cuerpo_imagen {
-    width: 500px;
-    height: 400px;
-    object-fit: cover;
+    width: 53%;
+    justify-content: space-evenly;
 }
 .contenido{
-    width: 38%;
+    margin-top: 6rem;
+    width: 45%;
 }
 .cuerpo_titulo{
     font-size: 45px;
     margin-bottom: 45px;
+    font-weight: 800;
 }
 .cuerpo_texto{
     margin-bottom: 45px;
@@ -85,7 +113,7 @@ ul{
     max-width: 1200px;
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(auto-fill, 15rem);
+    grid-template-columns: repeat(auto-fill, 30rem);
     gap: 40px;
     justify-content: center;
     justify-items: center;
@@ -93,6 +121,7 @@ ul{
 .card_img{
     border-radius: 15px;
     width: 100%;
+    object-fit:contain;
 }
 .card_title{
     margin-top: 15px;
